<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView17"
        style="@style/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="@string/password_header"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView18"
        style="@style/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView17"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/info_password"
        android:textAlignment="center"
        android:textColor="@color/black" />


    <EditText
        android:id="@+id/userEmailRecoverPassword"
        style="@style/inputtext"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_below="@+id/textView18"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="35dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="38dp"
        android:background="@color/gray"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/button10"
        style="@style/buttonPrimary"
        android:layout_below="@+id/userEmailRecoverPassword"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:onClick="getPasswordByEmail"
        android:text="@string/recover"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userEmailRecoverPassword" />

    <ImageView
        android:onClick="clearText"
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/userEmailRecoverPassword"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="43dp"
        android:layout_marginBottom="10dp"
        app:srcCompat="@drawable/cancel" />
</RelativeLayout>